WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
264120
[CSS Fonts] The size-adjust descriptor shouldn't scale system fallback fonts.
https://bugs.webkit.org/show_bug.cgi?id=264120
Summary
[CSS Fonts] The size-adjust descriptor shouldn't scale system fallback fonts.
ChangSeok Oh
Reported
2023-11-02 17:00:51 PDT
We address the failure of
https://wpt.fyi/results/css/css-fonts/size-adjust-unicode-range-system-fallback.html
Attachments
Add attachment
proposed patch, testcase, etc.
ChangSeok Oh
Comment 1
2023-11-02 17:12:05 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/19917
Radar WebKit Bug Importer
Comment 2
2023-11-09 16:01:18 PST
<
rdar://problem/118204813
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug