[CSS Fonts] The size-adjust descriptor shouldn't scale system fallback fonts. https://bugs.webkit.org/show_bug.cgi?id=264120

Reviewed by NOBODY (OOPS!).

When creating a system fallback font for a character on Mac, we previously used
the primary font's platform data, which could inadvertently lead to scaling
when the size-adjust descriptor scaled the primary font. To resolve this, we now
utilize the computed size of the font description as the GTK/WPE ports do.

Test: imported/w3c/web-platform-tests/css/css-fonts/size-adjust-unicode-range-system-fallback.html

* LayoutTests/imported/w3c/web-platform-tests/css/css-fonts/size-adjust-unicode-range-system-fallback-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-fonts/size-adjust-unicode-range-system-fallback-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-fonts/size-adjust-unicode-range-system-fallback.html: Added.
* Source/WebCore/platform/graphics/cocoa/FontCacheCoreText.cpp:
(WebCore::FontCache::systemFallbackForCharacterCluster):
* Source/WebCore/platform/graphics/coretext/FontPlatformDataCoreText.cpp:
(WebCore::FontPlatformData::FontPlatformData):